Versión con la tabla de contribución por miembro del equipo

--- a/notebook/Practica 2.ipynb
+++ b/notebook/Practica 2.ipynb
@@ -6383,6 +6383,17 @@
    "source": [
     "bdFinal.to_csv(p+\"csv/bbdd_post_DataCleaning.csv\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "|Contribuciones| Firma |\n",
+    "|---|---|\n",
+    "|Investigación previa| Ander Estebanez Centeno|\n",
+    "|Redacción de las respuestas| Ander Estebanez Centeno|\n",
+    "|Desarrollo código| Ander Estebanez Centeno|"
+   ]
   }
  ],
  "metadata": {
